@@ -1,3 +1,12 @@
+2006-10-11  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/HBMM.[ch]: remove HarwellBoeing format for writing.
+	* src/SOURCES_C.mkf (SOURCES_C): no longer compile iohb.c
+
+2006-10-06  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/dgCMatrix.R: deprecate the writeHB function.  Use writeMM instead.
+
 2006-10-06  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.9975-3
